--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -36,6 +36,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SyntacticalAnalyzer\ITextParser.cs" />
+    <Compile Include="TextObjectModel\ISentence.cs" />
+    <Compile Include="TextObjectModel\IText.cs" />
+    <Compile Include="TextObjectModel\IToken.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
