--- a/TextObjectModel/TextObjectModel.csproj
+++ b/TextObjectModel/TextObjectModel.csproj
@@ -36,6 +36,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sentences\Sentence.cs" />
+    <Compile Include="SentenceElements\Separator.cs" />
+    <Compile Include="Text.cs" />
+    <Compile Include="SentenceElements\SentenceElement.cs" />
+    <Compile Include="SentenceElements\Word.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{d3ebd45d-e73a-48b0-86dd-614c2a776e38}</Project>
+      <Name>Interfaces</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
