--- a/SyntacticalAnalyzer/SyntacticalAnalyzer.csproj
+++ b/SyntacticalAnalyzer/SyntacticalAnalyzer.csproj
@@ -36,6 +36,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextParser.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{d3ebd45d-e73a-48b0-86dd-614c2a776e38}</Project>
+      <Name>Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TextObjectModel\TextObjectModel.csproj">
+      <Project>{9d838415-27c6-4798-8b9a-fee2d8b6b3c7}</Project>
+      <Name>TextObjectModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
