--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -37,9 +37,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyntacticalAnalyzer\ITextParser.cs" />
-    <Compile Include="TextObjectModel\ISentence.cs" />
+    <Compile Include="TextObjectModel\SentenceElements\ISeparator.cs" />
+    <Compile Include="TextObjectModel\SentenceElements\IWord.cs" />
+    <Compile Include="TextObjectModel\Sentences\ISentence.cs" />
     <Compile Include="TextObjectModel\IText.cs" />
-    <Compile Include="TextObjectModel\ISentenceElement.cs" />
+    <Compile Include="TextObjectModel\SentenceElements\ISentenceElement.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
