Determine Type of Sentence

--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -39,6 +39,7 @@
     <Compile Include="SyntacticalAnalyzer\ITextParser.cs" />
     <Compile Include="TextObjectModel\SentenceElements\ISeparator.cs" />
     <Compile Include="TextObjectModel\SentenceElements\IWord.cs" />
+    <Compile Include="TextObjectModel\Sentences\Enums\SentenceType.cs" />
     <Compile Include="TextObjectModel\Sentences\ISentence.cs" />
     <Compile Include="TextObjectModel\IText.cs" />
     <Compile Include="TextObjectModel\SentenceElements\ISentenceElement.cs" />
