--- a/UserInterface/App.config
+++ b/UserInterface/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <appSettings>
-    <add key="readFilePath" value="..\..\..\Files\1.txt"/>
+    <add key="txtInputFilePath" value="..\..\..\Files\TXT Files\"/>
+    <add key="xmlOutputFilePath" value="..\..\..\Files\XML Files\"/>
   </appSettings>
 </configuration>
