--- a/UserInterface/App.config
+++ b/UserInterface/App.config
@@ -6,5 +6,7 @@
   <appSettings>
     <add key="txtInputFilePath" value="..\..\..\Files\TXT Files\"/>
     <add key="xmlOutputFilePath" value="..\..\..\Files\XML Files\"/>
+    <add key="wordSeparationPattern" value="\b(\w+)((\p{P}{0,3})\s?)"/>
+    <add key="sentencesSeparationPattern" value="(?&lt;!\w\.\w.)(?&lt;![A-Z][a-z]\.)(?&lt;=\.|\?|\!)\s"/>
   </appSettings>
 </configuration>
