Use DataContract to Serialize Text

--- a/UserInterface/App.config
+++ b/UserInterface/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <appSettings>
-    <add key="txtInputFilePath" value="..\..\..\Files\TXT Files\"/>
-    <add key="xmlOutputFilePath" value="..\..\..\Files\XML Files\"/>
+    <add key="txtFilesPath" value="..\..\..\Files\TXT Files\"/>
+    <add key="xmlFilesPath" value="..\..\..\Files\XML Files\"/>
     <add key="wordSeparationPattern" value="\b(\w+)((\p{P}{0,3})\s?)"/>
     <add key="sentencesSeparationPattern" value="(?&lt;!\w\.\w.)(?&lt;![A-Z][a-z]\.)(?&lt;=\.|\?|\!)\s"/>
   </appSettings>
