--- a/TextObjectModel/TextObjectModel.csproj
+++ b/TextObjectModel/TextObjectModel.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SentenceElements\SentenceElement.cs" />
     <Compile Include="Sentences\Sentence.cs" />
     <Compile Include="SentenceElements\Separator.cs" />
     <Compile Include="Text.cs" />
