--- a/TextObjectModel/TextObjectModel.csproj
+++ b/TextObjectModel/TextObjectModel.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SentenceElements\SentenceElement.cs" />
+    <Compile Include="SentenceElements\SentenceElementFactory.cs" />
     <Compile Include="Sentences\Sentence.cs" />
     <Compile Include="SentenceElements\Separator.cs" />
     <Compile Include="Text.cs" />
