--- a/TextObjectModel/TextObjectModel.csproj
+++ b/TextObjectModel/TextObjectModel.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SentenceElements\SentenceElement.cs" />
     <Compile Include="SentenceElements\SentenceElementFactory.cs" />
+    <Compile Include="SentenceElements\SeparatorConstants.cs" />
     <Compile Include="Sentences\Sentence.cs" />
     <Compile Include="SentenceElements\Separator.cs" />
     <Compile Include="Text.cs" />
